# rust-quickstart

./: .env.example  .gitignore  Cargo.toml  README.md
src/: example.rs  service.rs
