[package]
name = "ngrok-rust-quickstart"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "src/service.rs"

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
ngrok = "0.14.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["tokio"] }
async-trait = "0.1.59"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
url = "2.5.4"
